# flashot

./: .gitignore  AGENTS.md  CLAUDE.md  CNAME  LICENSE  Makefile  README.md  README.zh-CN.md  README.zh-TW.md  cliff.toml  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  docs.yml  homebrew.yml  release.yml
docs/: _config.yml  index.md  package.json  smoke-matrix.md
docs/.vitepress/: config.mts
docs/development/: architecture.md  contributing.md  setup.md
docs/features/: adjustments.md  annotation.md  capture.md  color-picker.md  pin.md  scroll-capture.md
docs/guide/: getting-started.md  installation.md  settings.md
docs/public/: CNAME
docs/zh-CN/: index.md
docs/zh-TW/: index.md
homebrew/: flashot.rb
scripts/: ci-local.sh
scripts/macos/: create-self-signed-codesign-cert.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/benches/: capture_bench.rs  clipboard_bench.rs  crop_bench.rs  scroll_stitch_bench.rs  window_enum_bench.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/lib/onnxruntime/: README.md
src-tauri/src/: app_activation.rs  clipboard.rs  commands.rs  hotkey.rs  i18n.rs  image_adjust.rs  lib.rs  main.rs  mask.rs  overlay_window.rs  permission.rs  pin_mgr.rs  saver.rs  scroll_session.rs  scroll_stitch.rs  settings_store.rs  tray.rs  tray_template_icon.rs  types.rs  window_mgr.rs
src-tauri/src/capture/: linux.rs  macos.rs  mod.rs  portal_uri.rs  windows.rs
src-tauri/src/ocr/: commands.rs  detector.rs  download.rs  engine.rs  manifest.rs  mod.rs  paths.rs  postprocess.rs  recognizer.rs  types.rs
src-tauri/src/scroll_capture/: frame_buffer.rs  mapping.rs  mod.rs  pipewire_source.rs  portal.rs  wayshot_source.rs  xcap_source.rs
src-tauri/src/window_probe/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/tests/: ocr_integration.rs
src-tauri/tests/fixtures/ocr/: README.md
src/__tests__/: about.test.tsx  accent-color-select.test.tsx  annotation-commands.test.ts  annotation-cursor.test.ts  annotation-draw-tool.test.ts  annotation-export.test.ts  annotation-line-tool.test.ts  annotation-measure-tool.test.ts  annotation-property-panel.test.tsx  annotation-render.test.ts  annotation-smart-erase.test.ts  annotation-stage-helpers.test.ts  annotation-stage-selection.test.tsx  annotation-stage-text.test.tsx  annotation-store.test.ts  annotation-toolbar.test.tsx  annotation-wheel-resize.test.ts  checkbox.test.tsx  chrome-anchor.test.ts  color-picker.test.ts  context-menu.test.ts  corner-radius-panel.test.tsx  corner-radius-store.test.ts  cursor.test.ts  detect-highlight-rounded.test.tsx  dim-mask-rounded.test.tsx  font-assets.test.ts  frozen-layer.test.tsx  geometry.test.ts  hit-test.test.ts  homebrew-workflow.test.ts  i18n.test.ts  ipc.test.ts  ocr-chrome-format.test.ts  ocr-state.test.ts  (+20 more)
(+142 files in other folders)
