[package]
name = "flashot"
version = "0.6.0-beta.2"
description = "Flashot is a screenshot tool built with Rust and Tauri."
authors = ["poneding@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "flashot_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
resvg = { version = "0.47", default-features = false }
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
  "protocol-asset",
  "tray-icon",
  "image-png",
  "macos-private-api",
] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-autostart = "2"
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
dirs = "5"
tokio = { version = "1", features = [
  "sync",
  "rt-multi-thread",
  "macros",
  "time",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
once_cell = "1"
parking_lot = "0.12"
crossbeam-channel = "0.5"
chrono = { version = "0.4", features = ["clock"] }
xcap = "0.9"
global-hotkey = "0.6"
arboard = { version = "3", features = ["wayland-data-control"] }
rfd = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
fontdb = "0.23.0"
uuid = { version = "1.11", features = ["v4"] }
urlencoding = "2"

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = "0.8"
gdk = { version = "0.18", features = ["v3_24"] }
gtk = { version = "0.18", features = ["v3_24"] }
libloading = "0.8"
libwayshot-xcap = "0.3"
xcb = "1.5"
zbus = "5"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.9"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Dwm",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "capture_bench"
harness = false

[[bench]]
name = "window_enum_bench"
harness = false

[[bench]]
name = "crop_bench"
harness = false

[[bench]]
name = "clipboard_bench"
harness = false

[[bench]]
name = "scroll_stitch_bench"
harness = false
